--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
     <title>Mern Blog</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" style="background-color: #E7F6FF;"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
